--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: grey;
+  background-color: transparent;
   position: fixed;
   width: 100%;
   z-index: 999;
@@ -57,11 +57,12 @@ nav {
     position: fixed;
     top: 0;
     right: 0;
-    width: 80%;
+    width: 50%;
     height: 100%;
     flex-direction: column;
     align-items: center;
     background-color: black;
+    opacity: 0.8;
     padding: 20px 0;
     z-index: 10;
     transition: 0.3s ease-in-out;
